Resolving some layout issues with heading tags on the Q&A page that was caused when I made changes earlier.

--- a/css/obsolete-browser.css
+++ b/css/obsolete-browser.css
@@ -7,11 +7,11 @@ body{
     min-height: 100vh;
 }
 
-a{
+body a{
     font-family: 'Inconsolata', 'Courier', 'Courier New', 'Lucida Sans Typewriter', 'Lucida Console', 'Monaco', 'Andale Mono', monospace;
 }
 
-b{
+body b{
     color: #333;
 }
 
